--- a/HTML 5 Introductions.html
+++ b/HTML 5 Introductions.html
@@ -21,14 +21,12 @@
     <h2>Figure</h2>
     <figure>
       <img
-        src="Html_intro.jpg"
-        alt="Photograph of two sea otters floating in water"
+        src="test picture html5.jpg"
+        alt="Photograph of two sea otters
+      floating in water"
       />
       <br />
-      <figcaption>
-        Sea otters hold hands when they sleep so they don't drift away from each
-        other.
-      </figcaption>
+      <figcaption>pic. &copy; 01 Old view of modern city</figcaption>
     </figure>
     <br />
     <hr />
@@ -77,14 +75,14 @@
     <h2>Audio</h2>
     <br />
     <audio controls>
-      <source src="music.mp3" type="audio/mpeg" />
+      <source src="test music.mp3" type="audio/mpeg" />
     </audio>
     <br />
     <hr />
     <h2>Video</h2>
     <br />
     <video width="400" controls>
-      <source src="beach.mp4" type="video/mp4" />
+      <source src="test video.mp4" type="video/mp4" />
     </video>
   </body>
 </html>
