--- a/HTML Introductions.html
+++ b/HTML Introductions.html
@@ -6,6 +6,9 @@
   </head>
 
   <body>
+    <!--this for the same pages-->
+    <div class="section one" id="section1">Main</div>
+    <!-- ------------------------->
     <h2>Body,Head,Title</h2>
     <br />
     <h1>This is the Body of the Page</h1>
@@ -112,24 +115,25 @@
     <hr />
     <h2>Linking to other sites</h2>
     <br>
-    <p>Movie Reviews: 
+    <p>My channels: 
         <ul>
-            <li><a href="https//www.empireonline.com">Empire</a></li>
-            <li><a href="https//www.metacritic.com">Metacritic</a></li>
-            <li><a href="https//www.rottentomatoes.com">Rotten Tomatoes </a></li>
-            <li><a href="https//www.variety.com">Variety</a></li>
+          <li><a href="https://www.youtube.com/@sasudarurano">My Youtube</a></li>
+          <li><a href="https://www.instagram.com/sasudar.urano/">My Intagram </a></li>
+          <li><a href="https://github.com/sasudarurano/HTML_Introductions">My Github</a></li>
+          <li> <a href="https://www.youtube.com" target="_blank">Youtube new page</a></li>
         </ul>
     </p>
     <br>
     <hr>
-    <h2>Linking to other pages on the same site</h2>
+    <h2>Linking to other pages on the same pages</h2>
     <p>Movie Reviews:
+      <div class="nav">
+        
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html">About</a></li>
-            <li><a href="movies.html">Movies</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#section1" class="ctn">Turn to Main</a></li>
         </ul>
+        </div>
+    <h2>linking to other pages on the same sites</h2>
     </p>
     <br>
     <hr>
@@ -294,5 +298,6 @@
     <p>Subscribe to our email list:</p>
     <input type="emai" name="email"/> 
     <input type="submit" value="Subscribe"/>
-  </body>
+    <p> <font size=7>Hello Warudo</font></p>
+      </body>
 </html>
