--- a/HTML Introductions.html
+++ b/HTML Introductions.html
@@ -31,6 +31,10 @@
     <p>
       A paragraph consists of one or more sentences that form a self-contained
       unit of discourse. The start of a paragraph is indicated by a new lines
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, 
+      molestias aliquid! Accusamus commodi dolores cum harum. Quas veniam illum,
+       commodi placeat sunt praesentium illo, minima, ullam aperiam molestiae
+        adipisci earum.
     </p>
     <p>
       Text is easier to understand when it is split up into units of text. For
@@ -128,7 +132,7 @@
     <h2>Linking to other pages on the same pages</h2>
     <p>Turn to main or top:
       <div class="nav">
-        
+
         <ul>
             <li><a href="#section1" class="ctn">Turn to Main</a></li>
         </ul>
